--- a/lessons-york.html
+++ b/lessons-york.html
@@ -22,7 +22,7 @@ location: York
     <div class="row h_blog_item">
       <div class="col-lg-6">
         <div class="h_blog_img">
-          <img class="img-fluid" src="{{site.github.url}}/img/passplus-header.jpeg" alt="" />
+          <img class="img-fluid" src="{{site.github.url}}/img/passplus-header.jpg" alt="Checkmirrors cars" />
         </div>
       </div>
       <div class="col-lg-6">
@@ -42,63 +42,93 @@ location: York
     </div>
   </div>
 </section>
+<section class="feature_area section_gap_top title-bg">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-12">
+        <div class="main_title mb-0">
+          <h2 class="mb-3 text-white">Book from only £26 per hour or 10 lessons for £250</h2>
+          <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <!-- Intro End -->
-<section class="lessons-title">
+<div class="popular_courses section_gap_top">
   <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h2></h2>
-        <p class="lead">
-</p>
-        <div style="text-align: center;">
-        <h3>Book from only £26 per hour or 10 lessons for £250</h3>
-        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#bookFormModal">Book Now</button></div>
+    <div class="row justify-content-center">
+      <div class="col-lg-5">
+        <div class="main_title">
+          <h2 class="mb-3">What do we offer?</h2>
+          <p>
+            It couldn't be easier to learn with <span>checkmirrors</span>.
+          </p>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+    <div class="row">
+      <!-- single course -->
+      <div class="col-lg-12">
+        <div class="owl-carousel driving_features">
+          <div class="single_course">
+            <div class="course_head">
+              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-3-350x150.jpg" alt="" />
+            </div>
+            <div class="course_content">
+              <h4 class="mb-3">
+                <a href="course-details.html">Available for all Levels of Experience</a>
+              </h4>
+              <p>
+                Just turned 17 and starting out or in need of some refresher lessons, we will help you get on the road.
+              </p>
 
-<section class="lessons-2">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-6">
-        <div class="card bg-dark text-white text-center">
-          <img class="card-img" src="{{ site.github.url }}/img/lessons-3-350x150.jpg" width="100%" alt="checkmirrors cars">
-          <div class="card-img-overlay">
-            <h4 class="card-title">Available for all Levels of Experience</h4>
-            <p class="card-text lead">Just turned 17 and starting out or in need of some refresher lessons, we will help you get on the road.</p>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-md-6">
-        <div class="card bg-dark text-white text-center">
-          <img class="card-img" src="{{ site.github.url }}/img/lessons-2-350x150.jpg" width="100%" alt="Card image">
-          <div class="card-img-overlay">
-            <h4 class="card-title">Learn in York, Leeds or Wakefield</h4>
-            <p class="card-text lead">We now have instructors in York, Leeds & Wakefield</p>
+          <div class="single_course">
+            <div class="course_head">
+              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-2-350x150.jpg" alt="" />
+            </div>
+            <div class="course_content">
+              <h4 class="mb-3">
+                <a href="course-details.html">Learn in York, Leeds or Wakefield</a>
+              </h4>
+              <p>
+                We now have instructors in York, Leeds & Wakefield.
+              </p>
+
+            </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-md-6">
-        <div class="card bg-dark text-white text-center">
-          <img class="card-img" src="{{ site.github.url }}/img/lessons-4-350x150.jpeg" width="100%" alt="Card image">
-          <div class="card-img-overlay">
-            <h4 class="card-title">Safe and Calm Environment</h4>
-            <p class="card-text lead">We know how nerve wracking it is to learn to drive, so we take care to make you as comfortable as possible.</p>
+          <div class="single_course">
+            <div class="course_head">
+              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-4-350x150.jpeg" alt="" />
+            </div>
+            <div class="course_content">
+              <h4 class="mb-3">
+                <a href="course-details.html">Safe and Calm Environment</a>
+              </h4>
+              <p>
+                We know how nerve wracking it is to learn to drive, so we take care to make you as comfortable as possible.
+              </p>
+
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-md-6">
-        <div class="card bg-dark text-white text-center">
-          <img class="card-img" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" width="100%" alt="Card image">
-          <div class="card-img-overlay">
-            <h4 class="card-title">Learn with an ADI Instructor</h4>
-            <p class="card-text lead">All of our instructors are ADI certified, approved by the DVSA to the highest standard.</p>
+          <div class="single_course">
+            <div class="course_head">
+              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" alt="" />
+            </div>
+            <div class="course_content">
+              <h4 class="mb-3">
+                <a href="course-details.html">Learn with an ADI Instructor</a>
+              </h4>
+              <p>
+                All of our instructors are ADI certified, approved by the DVSA to the highest standard.
+              </p>
+
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</section>
+</div>
