--- a/book-now.html
+++ b/book-now.html
@@ -15,21 +15,11 @@ tags:
 - book
 ---
 
-<section class="testimonal-img">
-  <div class="container">
-    <div class="row">
-      <div class="col-9">
-        <div class="page-title">
-          <h1>{{ page.title }}</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<div class="container">
+{% include hero.html %}
+<div class="container mt-4">
   <div class="row justify-content-center">
     <div class="col-5">
-      
+
       {% include form.html %}
     </div>
   </div>
