--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ tags:
 ---
 
 <section class="home_banner_area">
+  <video class="my-background-video jquery-background-video" loop autoplay muted playsinline poster="{{site.github.url}}/img/home-new2.jpg">
+		<source src="img/video/shortened-video-promo-cars-shoot.mp4" type="video/mp4">
+		<source src="img/video/shortened-video-promo-cars-shoot.webm" type="video/webm">
+	</video>
   <div class="banner_inner">
     <div class="container">
       <div class="row">
@@ -100,7 +104,7 @@ tags:
   </div>
 </section>
 
-<section class="feature_area section_gap_top">
+<section class="feature_area section_gap_top title-bg">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-6">
@@ -138,6 +142,89 @@ tags:
     </div>
   </div>
 </section>
+<div class="testimonial_area section_gap">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-5">
+        <div class="main_title">
+          <h2 class="mb-3">What our students say</h2>
+        </div>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="testi_slider owl-carousel">
+        <div class="testi_item">
+          <div class="row">
+            <div class="col-lg-4 col-md-6">
+              <img src="{{site.github.url}}/uploads/adam-walsh.jpg" alt="" />
+            </div>
+            <div class="col-lg-8">
+              <div class="testi_text">
+                <h4>Adam Welsh</h4>
+                <p>
+                  “Thanks to Rob from Checkmirrors I passed first time with only 4 minors. Rob is a great driving instructor, easy to get along with, I’d definitely recommend. Thanks again Rob"
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="testi_item">
+          <div class="row">
+            <div class="col-lg-4 col-md-6">
+              <img src="{{site.github.url}}/uploads/luke-pass.jpg" alt="" />
+            </div>
+            <div class="col-lg-8">
+              <div class="testi_text">
+                <h4>Luke Swainsbury</h4>
+                <p>
+                  “Passed first time, massive thank you to Rob at Checkmirrors for all the time and effort you put into me, extremely recommend.
+                  Thanks again”
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="testi_item">
+          <div class="row">
+            <div class="col-lg-4 col-md-6">
+              <img src="{{site.github.url}}/uploads/testimonial2018.jpg" alt="" />
+            </div>
+            <div class="col-lg-8">
+              <div class="testi_text">
+                <h4>Beth Loseby</h4>
+                <p>
+                  “Couldn’t recommend Rob from Checkmirrors driving school enough, after struggling with driving for months before taking lessons with him, I noticed a change straight away and passed first time!”
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="testi_item">
+          <div class="row">
+            <div class="col-lg-4 col-md-6">
+              <img src="{{site.github.url}}/img/testimonial-images/bridie-murray.jpg" alt="" />
+            </div>
+            <div class="col-lg-8">
+              <div class="testi_text">
+                <h4>Bridie Murray</h4>
+                <p>
+                  "Sarah has been fantastic. After going through at least 5 other different instructors, I instantly knew Sarah was a keeper! Would 100% recommend, lessons were fun and stress free. Sarah was very good at keeping me calm as I was a nervous driver."
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+          <div class="text-right">
+            <a href="{{site.github.url}}/testimonials/" class="event-link">View more <i class="fas fa-arrow-right"></i></a>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
 
 {% include about.html %}
