--- a/our-instructors.html
+++ b/our-instructors.html
@@ -15,52 +15,40 @@ tags:
 
 <!-- Page Intro -->
 
-<section class="instructors-img">
-  <div class="container">
-    <div class="row">
-      <div class="col-9">
-        <div class="page-title">
-          <h1>{{ page.title }}</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{% include hero.html %}
 
 <!-- Intro End -->
 
 <section>
   <div class="container">
-    <div class="row inst-image">
-
-        <div class="col-md-4 col-xs-12">
-          <img src="{{ site.github.url }}/img/sarah-hellowell.jpg" alt="Sarah Hellowell">
-        </div>
-        <div class="col-md-8 col-xs-12">
-          <h2>Sarah Hellowell</h2>
-          <p>Sarah is the founder of checkmirrors.</p>
-          <p>She is an ADI with qualifications that include The Diamond Special Test, Pass Plus and Cardington Special Test. She has been a fully qualified instructor for over 14 years and takes pride in offering a professional, calm and safe environment
-            that will help you pass your test.</p>
-        </div>
+    <div class="row mt-3">
+      <div class="col-md-3">
+      <img src="{{ site.github.url }}/img/sarah-hellowell.jpg" alt="Sarah Hellowell" class="img-fluid">
+      </div>
+      <div class="col-md-9 mt-sm-20 left-align-p">
+        <h2>Sarah Hellowell</h2>
+        <p>Sarah is the founder of checkmirrors.</p>
+        <p>She is an ADI with qualifications that include The Diamond Special Test, Pass Plus and Cardington Special Test. She has been a fully qualified instructor for over 14 years and takes pride in offering a professional, calm and safe environment
+          that will help you pass your test.</p>
+      </div>
     </div>
-    <div class="row inst-image">
-
-        <div class="col-md-4 col-xs-12">
-          <img src="{{ site.github.url }}/img/rob-kedge.jpg" alt="Rob Kedge">
-        </div>
-        <div class="col-md-8 col-xs-12">
-          <h2>Rob Kedge</h2>
-          <p>Rob has 14 years experience as an ADI. He is a patient and friendly instructor able to adapt to teaching methods to suit each indivdual person. As well as an ADI Rob is a Pass Plus and Fleet trainer.</p>
-        </div>
+    <div class="row mt-3">
+      <div class="col-md-3">
+      <img src="{{ site.github.url }}/img/rob-kedge.jpg" alt="Rob Kedge" class="img-fluid">
+      </div>
+      <div class="col-md-9 mt-sm-20 left-align-p">
+        <h2>Rob Kedge</h2>
+        <p>Rob has 14 years experience as an ADI. He is a patient and friendly instructor able to adapt to teaching methods to suit each indivdual person. As well as an ADI Rob is a Pass Plus and Fleet trainer.</p>
+      </div>
     </div>
-    <div class="row inst-image">
-
-        <div class="col-md-4 col-xs-12">
-          <img src="{{ site.github.url }}/img/ryan-fawcett.jpg" alt="Rob Kedge">
-        </div>
-        <div class="col-md-8 col-xs-12">
-          <h2>Ryan Fawcett</h2>
-          <p>Ryan is a Business Management graduate who has spent 5 years in sales before deciding to become a qualified driving instructor in York. Ryan enjoys working with all ages and thrives on the challenge and success of helping people pass their tests.</p>
-        </div>
+    <div class="row mt-3">
+      <div class="col-md-3">
+      <img src="{{ site.github.url }}/img/ryan-fawcett.jpg" alt="Ryan Fawcett" class="img-fluid">
+      </div>
+      <div class="col-md-9 mt-sm-20 left-align-p">
+        <h2>Ryan Fawcett</h2>
+        <p>Ryan is a Business Management graduate who has spent 5 years in sales before deciding to become a qualified driving instructor in York. Ryan enjoys working with all ages and thrives on the challenge and success of helping people pass their tests.</p>
+      </div>
+    </div>
     </div>
 </section>
