--- a/pass-plus.html
+++ b/pass-plus.html
@@ -17,17 +17,7 @@ tags:
 ---
 
 <!-- Page Intro -->
-<section class="passpluss-img">
-  <div class="container">
-    <div class="row">
-      <div class="col-9">
-        <div class="page-title">
-          <h1>{{ page.title }}</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{% include hero.html %}
 
 
 <!-- Intro End -->
@@ -60,33 +50,32 @@ tags:
     </div>
   </div>
 </section>
-
-<!-- Testimonial end -->
-
-<!-- What is Pass Plus -->
-
-<section class="lessons-title">
+<section class="passplus-price">
   <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h2>What is Pass Plus?</h2>
-        <p>Pass Plus is a scheme that was introduced to help new drivers who have recently passed improve their attitudes and skills that are essential for 'safe driving for life'.</p>
+    <div class="row justify-content-center text-center">
+      <div class="col">
+        <div class="jumbotron home-jmbo animated fadeInUp">
+          <h2>Entire Pass Plus Course Only £180</h2>
+          <button class="btn btn-primary btn-lg btn-responsive" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 </section>
-
-<!-- What is end -->
-
-<!-- Pass Plus syllabus -->
-
-<section>
+<div class="section_gap registration_area">
   <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <img src="{{ site.github.url }}/img/pass-plus.png">
+    <div class="row align-items-center">
+      <div class="col-lg-12">
+        <div class="row clock_sec clockdiv" id="clockdiv">
+
+            <h1 class="mb-3">What is Pass Plus?</h1>
+            <p>Pass Plus is a scheme that was introduced to help new drivers who have recently passed improve their attitudes and skills that are essential for 'safe driving for life'.</p>
+
+        </div>
       </div>
-      <div class="col-md-8">
+      </div>
+      <div class="row clock_sec">
+        <div class="col-lg-7">
         <h3>The Pass Plus syllabus with <span class="title-a">check</span><span class="title-b">mirrors</span></h3>
         <ul class="home-features">
           <li>Module 1: Introduction (Part 1)</li>
@@ -99,24 +88,9 @@ tags:
         </ul>
         <p>When you have successfully completed the course, you will be issued with a Certificate of Completion.</p>
       </div>
-</section>
-
-<!-- Syllabus end -->
-
-<!-- Pass Plus price -->
-
-<section class="passplus-price">
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="jumbotron home-jmbo animated fadeInUp">
-          <h2>Entire Pass Plus Course Only £180</h2>
-            <button class="btn btn-primary btn-lg btn-responsive" data-toggle="modal" data-target="#bookFormModal">Book Now</button></div>
-          </p
+      <div class="col-lg-5">
+        <img src="{{ site.github.url }}/img/pass-plus.png">
         </div>
-      </div>
     </div>
   </div>
-</section>
-
-<!-- Pass Plus Price End -->
+</div>
