--- a/pass-plus.html
+++ b/pass-plus.html
@@ -44,7 +44,7 @@ tags:
         <div class="mx-4">
           <h4 class="font-weight-bold mb-3">Toria Leedale</h4>
           <!-- <h6 class="font-weight-bold mb-3">Passed: </h6> -->
-          <p class="">Toria passed with checkmirrors and now has lower a insurance premium.</p>
+          <p class="">Toria passed with checkmirrors and now has a lower insurance premium.</p>
         </div>
       </div>
     </div>
