--- a/404.html
+++ b/404.html
@@ -7,7 +7,6 @@ tags:
 - instructor
 - lessons
 - york
-- leeds
 - school
 - motoring
 - learn
@@ -22,7 +21,7 @@ tags:
   <div class="row">
     <div class="col">
       <div class="panel">
-        <div class="panel-body not-found">
+        <div class="panel-body not-found shadow">
           <p>L</p>
         </div>
         <h1>Sorry, that page does not exist.</h1>
