--- a/lessons-york.html
+++ b/lessons-york.html
@@ -91,10 +91,10 @@ location: York
             </div>
             <div class="course_content">
               <h4 class="mb-3">
-                <a href="course-details.html">Learn in York, Leeds or Wakefield</a>
+                <a href="course-details.html">Learn in York and the surrounding area</a>
               </h4>
               <p>
-                We now have instructors in York, Leeds & Wakefield.
+                We now have instructors all around York and the surrounding area.
               </p>
 
             </div>
