video and form validation

--- a/become-an-instructor.html
+++ b/become-an-instructor.html
@@ -32,6 +32,12 @@ tags:
           Whether you want a career change or you're already qualified the checkmirrors family is currently welcoming new driving instructors to the family in the York area.
         </p>
       </div>
+
+    </div>
+    <div class="col-lg-12 justify-content-center">
+      <div class="youtube-video">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Y0E972YNdCI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     </div>
   </div>
 </section>
