--- a/lessons-york.html
+++ b/lessons-york.html
@@ -47,7 +47,7 @@ location: York
     <div class="row justify-content-center">
       <div class="col-lg-12">
         <div class="main_title mb-0">
-          <h2 class="mb-3 text-white">Book from only £26 per hour or 10 lessons for £250</h2>
+          <h2 class="mb-3 text-white">Book from only {{site.pricePerLesson}} per hour or 10 lessons for {{site.priceForTen}}</h2>
           <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
         </div>
       </div>
