pass pluss price

--- a/pass-plus.html
+++ b/pass-plus.html
@@ -55,7 +55,7 @@ tags:
     <div class="row justify-content-center text-center">
       <div class="col">
         <div class="jumbotron home-jmbo animated fadeInUp">
-          <h2>Entire Pass Plus Course Only £180</h2>
+          <h2>Entire Pass Plus Course Only {{ site.passPlusPrice }}!</h2>
           <button class="btn btn-primary btn-lg btn-responsive" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
           </div>
         </div>
