--- a/lessons-york.html
+++ b/lessons-york.html
@@ -17,7 +17,7 @@ location: York
 <!-- Page Intro -->
 
 {% include hero.html %}
-<section class="about_area section_gap">
+<section class="about_area clear-bg section_gap">
   <div class="container">
     <div class="row h_blog_item">
       <div class="col-lg-6">
@@ -26,10 +26,10 @@ location: York
         </div>
       </div>
       <div class="col-lg-6">
-        <div class="h_blog_text">
-          <div class="h_blog_text_inner left right">
-            <h4>Learn to drive with <span class="title-a">check</span><span class="title-b">mirrors</span> school of motoring</h4>
-            <p>Looking for driving lessons in {{ page.location }}? Look no further, checkmirrors offer flexible, friendly and professional driving lessons in {{ page.location }} and the surrounding areas.
+        <div class="card">
+          <div class="card-body">
+            <h2 class="mb-9">Learn to drive with <span class="title-a">check</span><span class="title-b">mirrors</span> school of motoring</h2>
+            <p class="mb-9">Looking for driving lessons in {{ page.location }}? Look no further, checkmirrors offer flexible, friendly and professional driving lessons in {{ page.location }} and the surrounding areas.
 
     Our driving instructors in {{ page.location }} have over 15 years experience, putting you, our pupil first guiding you to success.</p>
 
@@ -55,7 +55,7 @@ location: York
   </div>
 </section>
 <!-- Intro End -->
-<div class="popular_courses section_gap_top">
+<div class="popular_courses clear-bg section_gap_top">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-5">
@@ -71,11 +71,11 @@ location: York
       <!-- single course -->
       <div class="col-lg-12">
         <div class="owl-carousel driving_features">
-          <div class="single_course">
-            <div class="course_head">
+          <div class="card">
+            <div class="card-img-top">
               <img class="img-fluid" src="{{ site.github.url }}/img/lessons-3-350x150.jpg" alt="" />
             </div>
-            <div class="course_content">
+            <div class="card-body">
               <h4 class="mb-3">
                 <a href="course-details.html">Available for all Levels of Experience</a>
               </h4>
@@ -85,11 +85,11 @@ location: York
 
             </div>
           </div>
-          <div class="single_course">
-            <div class="course_head">
+          <div class="card">
+            <div class="card-img-top">
               <img class="img-fluid" src="{{ site.github.url }}/img/lessons-2-350x150.jpg" alt="" />
             </div>
-            <div class="course_content">
+            <div class="card-body">
               <h4 class="mb-3">
                 <a href="course-details.html">Learn in York and the surrounding area</a>
               </h4>
@@ -99,11 +99,11 @@ location: York
 
             </div>
           </div>
-          <div class="single_course">
-            <div class="course_head">
+          <div class="card">
+            <div class="card-img-top">
               <img class="img-fluid" src="{{ site.github.url }}/img/lessons-4-350x150.jpeg" alt="" />
             </div>
-            <div class="course_content">
+            <div class="card-body">
               <h4 class="mb-3">
                 <a href="course-details.html">Safe and Calm Environment</a>
               </h4>
@@ -113,11 +113,11 @@ location: York
 
             </div>
           </div>
-          <div class="single_course">
-            <div class="course_head">
+          <div class="card">
+            <div class="card-img-top">
               <img class="img-fluid" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" alt="" />
             </div>
-            <div class="course_content">
+            <div class="card-body">
               <h4 class="mb-3">
                 <a href="course-details.html">Learn with an ADI Instructor</a>
               </h4>
