--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ tags:
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-5">
-        <div class="main_title">
+        <div class="text-center mb-5">
           <h2 class="mb-3">Our Services</h2>
           <p>
             Learning to drive couldn't be easier with checkmirrors
@@ -152,7 +152,7 @@ tags:
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-5">
-        <div class="main_title">
+        <div class="text-center mb-5">
           <h2 class="mb-3">What our students say</h2>
         </div>
       </div>
