--- a/lessons-york.html
+++ b/lessons-york.html
@@ -42,11 +42,11 @@ location: York
     </div>
   </div>
 </section>
-<section class="feature_area section_gap_top title-bg">
+<section class="title-bg py-5">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-12">
-        <div class="main_title mb-0">
+        <div class="text-center my-5">
           <h2 class="mb-3 text-white">Book from only {{site.pricePerLesson}} per hour or 10 lessons for {{site.priceForTen}}</h2>
           <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
         </div>
@@ -59,7 +59,7 @@ location: York
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-5">
-        <div class="main_title">
+        <div class="text-center mb-5">
           <h2 class="mb-3">What do we offer?</h2>
           <p>
             It couldn't be easier to learn with <span>checkmirrors</span>.
