--- a/pass-plus.html
+++ b/pass-plus.html
@@ -24,33 +24,47 @@ tags:
 
 <!-- Testimonial -->
 
-<section id="ppTestimonial" class="pt-5">
+<section id="ppTestimonial" class="pt-5 clear-bg">
   <div class="container">
     <div class="row text-center text-md-left">
-      <div class="col-12 col-md-6 mb-5 d-md-flex justify-content-between">
-        <div class="avatar mb-md-0 mb-4 mx-4">
-          <img src="{{site.github.url}}/img/passpluss1.JPG" class="rounded z-depth-1" alt="Sample avatar">
-        </div>
-        <div class="mx-4">
-          <h4 class="font-weight-bold mb-3">Kishori Young</h4>
-          <!-- <h6 class="font-weight-bold mb-3">Passed: </h6> -->
-          <p class="">Check out Kishori, she earned her PassPlus with checkmirrors and is now winning!</p>
+      <div class="col-sm-12 col-md-6">
+      <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <div class="card-img new-rounded">
+              <img src="{{site.github.url}}/img/passpluss1.JPG" alt="...">
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Kishori Young</h5>
+              <p class="card-text">Check out Kishori, she earned her PassPlus with checkmirrors and is now winning!</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-12 col-md-6 mb-5 d-md-flex justify-content-between">
-        <div class="avatar mb-md-0 mb-4 mx-4">
-          <img src="{{site.github.url}}/img/ToriaLeedale.JPG" class="rounded z-depth-1" alt="Sample avatar">
-        </div>
-        <div class="mx-4">
-          <h4 class="font-weight-bold mb-3">Toria Leedale</h4>
-          <!-- <h6 class="font-weight-bold mb-3">Passed: </h6> -->
-          <p class="">Toria passed with checkmirrors and now has a lower insurance premium.</p>
+      </div>
+      <div class="col-sm-12 col-md-6">
+      <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <div class="card-img new-rounded">
+              <img src="{{site.github.url}}/img/ToriaLeedale.JPG" alt="...">
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Toria Leedale</h5>
+              <p class="card-text">Toria passed with checkmirrors and now has a lower insurance premium.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    </div>
   </div>
 </section>
-<section class="passplus-price">
+<section class="passplus-price p-5">
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col">
