--- a/become-an-instructor.html
+++ b/become-an-instructor.html
@@ -26,7 +26,7 @@ tags:
 <section class="container mb-4" id="become-check">
   <div class="row justify-content-center mt-4">
     <div class="col-lg-12">
-      <div class="main_title">
+      <div class="text-center my-3">
         <h2 class="mb-3">Become a Driving Instructor with checkmirrors</h2>
         <p>
           Whether you want a career change or you're already qualified the checkmirrors family is currently welcoming new driving instructors to the family in the York area.
@@ -46,6 +46,7 @@ tags:
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 col-sm-12">
+          <h3 class="mb-3">What's included:</h3>
           <div class="row">
             <div class="col-1 namo">
               <i class="fas fa-pound-sign fa-lg"></i>
