--- a/our-instructors.html
+++ b/our-instructors.html
@@ -19,35 +19,69 @@ tags:
 
 <!-- Intro End -->
 
-<section>
+<section class="clear-bg">
   <div class="container">
-    <div class="row mt-3">
-      <div class="col-md-3">
-      <img src="{{ site.github.url }}/img/sarah-hellowell.jpg" alt="Sarah Hellowell" class="img-fluid">
-      </div>
-      <div class="col-md-9 mt-sm-20 left-align-p">
-        <h2>Sarah Hellowell</h2>
-        <p>Sarah is the founder of checkmirrors.</p>
-        <p>She is an ADI with qualifications that include The Diamond Special Test, Pass Plus and Cardington Special Test. She has been a fully qualified instructor for over 14 years and takes pride in offering a professional, calm and safe environment
-          that will help you pass your test.</p>
+    <div class="row justify-content-center">
+      <div class="col-lg-5">
+        <div class="text-center my-5">
+          <h2 class="mb-3">Get to know us.</h2>
+          <p>Find out more about our team of driving instructors at checkmirrors</p>
+        </div>
       </div>
     </div>
     <div class="row mt-3">
-      <div class="col-md-3">
-      <img src="{{ site.github.url }}/img/rob-kedge.jpg" alt="Rob Kedge" class="img-fluid">
+      <div class="col-12">
+      <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <div class="card-img new-rounded">
+              <img src="{{ site.github.url }}/img/sarah-hellowell.jpg" alt="Sarah Hellowell">
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h3 class="card-title">Sarah Hellowell</h3>
+              <p class="small">Sarah is the founder of checkmirrors.</p>
+              <p class="card-text">She is an ADI with qualifications that include The Diamond Special Test, Pass Plus and Cardington Special Test. She has been a fully qualified instructor for over 14 years and takes pride in offering a professional, calm and safe environment
+                that will help you pass your test.</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-md-9 mt-sm-20 left-align-p">
-        <h2>Rob Kedge</h2>
-        <p>Rob has 14 years experience as an ADI. He is a patient and friendly instructor able to adapt to teaching methods to suit each indivdual person. As well as an ADI Rob is a Pass Plus and Fleet trainer.</p>
       </div>
-    </div>
-    <div class="row mt-3">
-      <div class="col-md-3">
-      <img src="{{ site.github.url }}/img/ryan-fawcett.jpg" alt="Ryan Fawcett" class="img-fluid">
+      <div class="col-12">
+      <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <div class="card-img new-rounded">
+              <img src="{{ site.github.url }}/img/rob-kedge.jpg" alt="Rob Kedge">
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h3 class="card-title">Rob Kedge</h3>
+              <p class="card-text">Rob has 14 years experience as an ADI. He is a patient and friendly instructor able to adapt to teaching methods to suit each indivdual person. As well as an ADI Rob is a Pass Plus and Fleet trainer.</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-md-9 mt-sm-20 left-align-p">
-        <h2>Ryan Fawcett</h2>
-        <p>Ryan is a Business Management graduate who has spent 5 years in sales before deciding to become a qualified driving instructor in York. Ryan enjoys working with all ages and thrives on the challenge and success of helping people pass their tests.</p>
+      </div>
+      <div class="col-12">
+      <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <div class="card-img new-rounded">
+              <img src="{{ site.github.url }}/img/ryan-fawcett.jpg" alt="Ryan Fawcett">
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h3 class="card-title">Ryan Fawcett</h3>
+              <p class="card-text">Ryan is a Business Management graduate who has spent 5 years in sales before deciding to become a qualified driving instructor in York. Ryan enjoys working with all ages and thrives on the challenge and success of helping people pass their tests.</p>
+            </div>
+          </div>
+        </div>
+      </div>
       </div>
     </div>
     </div>
