--- a/testimonials-17.html
+++ b/testimonials-17.html
@@ -13,36 +13,39 @@ tags:
 - drive
 - testimonials
 ---
-
-<div id="fb-root"></div>
-<script>
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s);
-    js.id = id;
-    js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-</script>
-<div id="fb-root"></div>
-<script>
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s);
-    js.id = id;
-    js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-</script>
 {% include hero.html %}
+<div id="fb-root"></div>
+<script>
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s);
+    js.id = id;
+    js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+</script>
+<div id="fb-root"></div>
+<script>
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s);
+    js.id = id;
+    js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+</script>
+
 {% include book-promo.html %}
+
+<section class="clear-bg pt-5">
+
 
 <div class="container">
   <div class="row align-items-center">
     <div class="col-md-12 test-year">
-      <h2 class="mb-3">Don't just take our word for it!</h2>
+      <h2 class="text-center mb-3">Don't just take our word for it!</h2>
     </div>
   </div>
   <div class="row mt-3 mb-3">
@@ -50,7 +53,9 @@ tags:
 
     <div class="col-md-4 col-xs-12">
       <div class="card testimonial-card mt-3">
-        <img class="card-img-top" src="{{ post.image }}{{post.img-url}}" alt="{{post.title}}">
+        <div class="card-img-top">
+          <img src="{{ post.image }}{{post.img-url}}" alt="{{post.title}}">
+        </div>
         <div class="card-body">
           <h4 class="card-title">{{ post.title | truncatewords: 10}}</h4>
           <p class="card-text">
@@ -66,3 +71,4 @@ tags:
 
   </div>
 </div>
+</section>
