--- a/lessons-york.html
+++ b/lessons-york.html
@@ -77,7 +77,7 @@ location: York
             </div>
             <div class="card-body">
               <h4 class="mb-3">
-                <a href="course-details.html">Available for all Levels of Experience</a>
+                Available for all Levels of Experience
               </h4>
               <p>
                 Just turned 17 and starting out or in need of some refresher lessons, we will help you get on the road.
@@ -91,7 +91,7 @@ location: York
             </div>
             <div class="card-body">
               <h4 class="mb-3">
-                <a href="course-details.html">Learn in York and the surrounding area</a>
+                Learn in York and the surrounding area
               </h4>
               <p>
                 We now have instructors all around York and the surrounding area.
@@ -105,7 +105,7 @@ location: York
             </div>
             <div class="card-body">
               <h4 class="mb-3">
-                <a href="course-details.html">Safe and Calm Environment</a>
+                Safe and Calm Environment
               </h4>
               <p>
                 We know how nerve wracking it is to learn to drive, so we take care to make you as comfortable as possible.
@@ -119,7 +119,7 @@ location: York
             </div>
             <div class="card-body">
               <h4 class="mb-3">
-                <a href="course-details.html">Learn with an ADI Instructor</a>
+                Learn with an ADI Instructor
               </h4>
               <p>
                 All of our instructors are ADI certified, approved by the DVSA to the highest standard.
