--- a/our-instructors.html
+++ b/our-instructors.html
@@ -42,7 +42,7 @@ tags:
             <div class="card-body">
               <h3 class="card-title">Sarah Hellowell</h3>
               <p class="small">Sarah is the founder of checkmirrors.</p>
-              <p class="card-text">She is an ADI with qualifications that include The Diamond Special Test, Pass Plus and Cardington Special Test. She has been a fully qualified instructor for over 14 years and takes pride in offering a professional, calm and safe environment
+              <p class="card-text">She is an ADI with qualifications that include The Diamond Special Test, Pass Plus and Cardington Special Test. She has been a fully qualified instructor for over 17 years and takes pride in offering a professional, calm and safe environment
                 that will help you pass your test.</p>
             </div>
           </div>
@@ -60,7 +60,7 @@ tags:
           <div class="col-md-8">
             <div class="card-body">
               <h3 class="card-title">Rob Kedge</h3>
-              <p class="card-text">Rob has 14 years experience as an ADI. He is a patient and friendly instructor able to adapt to teaching methods to suit each indivdual person. As well as an ADI Rob is a Pass Plus and Fleet trainer.</p>
+              <p class="card-text">Rob has 17 years experience as an ADI. He is a patient and friendly instructor able to adapt to teaching methods to suit each indivdual person. As well as an ADI Rob is a Pass Plus and Fleet trainer.</p>
             </div>
           </div>
         </div>
@@ -77,7 +77,7 @@ tags:
           <div class="col-md-8">
             <div class="card-body">
               <h3 class="card-title">Ryan Fawcett</h3>
-              <p class="card-text">Ryan is a Business Management graduate who has spent 5 years in sales before deciding to become a qualified driving instructor in York. Ryan enjoys working with all ages and thrives on the challenge and success of helping people pass their tests.</p>
+              <p class="card-text">Ryan has been a qualified driving instructor and has been teaching for over 2 and half years. Ryan is a Business Management graduate who has spent 5 years in sales before deciding to become a qualified driving instructor in York. Ryan enjoys working with all ages and thrives on the challenge and success of helping people pass their tests.</p>
             </div>
           </div>
         </div>
