--- a/become-an-instructor.html
+++ b/become-an-instructor.html
@@ -1,7 +1,7 @@
 ---
 title: Become an Instructor
 permalink: "/become-an-instructor/"
-description: Become an ADI qualified Driving Instructor in the York area with Check
+description: Become an ADI qualified Driving Instructor in the York area with checkmirrors and become part of the family.
   Mirrors
 layout: default
 tags:
