--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Driving Instructor York | checkmirrors.co.uk
+title: Driving Lessons in York
 layout: default
 tags:
 - driving
@@ -216,3 +216,4 @@ testimonial_section:
 </section>
 
 {% include about.html %}
+{% include structured-data.html %}
