--- a/lessons-york.html
+++ b/lessons-york.html
@@ -1,5 +1,6 @@
 ---
 title: Driving Lessons in York
+description: Learn to drive in York with checkmirrors, book your driving lessons online today. We have female driving instructors available, NHS discount and are COVID secure.
 permalink: "/driving-lessons-york/"
 layout: default
 tags:
@@ -73,7 +74,7 @@ location: York
         <div class="owl-carousel driving_features">
           <div class="card">
             <div class="card-img-top">
-              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-3-350x150.jpg" alt="" />
+              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-3-350x150.jpg" alt="Picture of a gearstick" />
             </div>
             <div class="card-body">
               <h4 class="mb-3">
@@ -87,7 +88,7 @@ location: York
           </div>
           <div class="card">
             <div class="card-img-top">
-              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-2-350x150.jpg" alt="" />
+              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-2-350x150.jpg" alt="Picture of a toy car" />
             </div>
             <div class="card-body">
               <h4 class="mb-3">
@@ -101,7 +102,7 @@ location: York
           </div>
           <div class="card">
             <div class="card-img-top">
-              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-4-350x150.jpeg" alt="" />
+              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-4-350x150.jpeg" alt="Picture of a road" />
             </div>
             <div class="card-body">
               <h4 class="mb-3">
@@ -115,7 +116,7 @@ location: York
           </div>
           <div class="card">
             <div class="card-img-top">
-              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" alt="" />
+              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" alt="Picture of the checkmirrors team and cars" />
             </div>
             <div class="card-body">
               <h4 class="mb-3">
