--- a/pass-plus.html
+++ b/pass-plus.html
@@ -1,5 +1,6 @@
 ---
-title: Pass Plus
+title: Pass Plus Driving Lessons
+description: Extend your driving ability and lower your premiums with PassPlus driving lessons at checkmirrors driving instructors in York.
 permalink: "/passplus/"
 layout: default
 tags:
@@ -32,7 +33,7 @@ tags:
         <div class="row no-gutters">
           <div class="col-md-4">
             <div class="card-img new-rounded">
-              <img src="{{site.github.url}}/img/passpluss1.JPG" alt="...">
+              <img src="{{site.github.url}}/img/passpluss1.JPG" alt="Kishori Young with PassPlus">
             </div>
           </div>
           <div class="col-md-8">
@@ -49,7 +50,7 @@ tags:
         <div class="row no-gutters">
           <div class="col-md-4">
             <div class="card-img new-rounded">
-              <img src="{{site.github.url}}/img/ToriaLeedale.JPG" alt="...">
+              <img src="{{site.github.url}}/img/ToriaLeedale.JPG" alt="Toria Leedale with PassPlus">
             </div>
           </div>
           <div class="col-md-8">
