--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-title: '404'
+title: 'Uh oh, 404'
 permalink: "/404/"
 layout: default
 tags:
@@ -20,10 +20,10 @@ tags:
   <div class="row">
     <div class="col">
       <div class="panel">
-        <div class="panel-body not-found shadow">
+        <div class="panel-body not-found shadow mb-3">
           <p>L</p>
         </div>
-        <h1>Sorry, that page does not exist.</h1>
+        <h2 class="text-center mt-3">Sorry, that page does not exist.</h2>
       </div>
 
     </div>
