--- a/become-an-instructor.html
+++ b/become-an-instructor.html
@@ -1,5 +1,5 @@
 ---
-title: Become an Instructor
+title: Become a Driving Instructor
 permalink: "/become-an-instructor/"
 description: Become an ADI qualified Driving Instructor in the York area with checkmirrors and become part of the family.
   Mirrors
