--- a/pass-plus.html
+++ b/pass-plus.html
@@ -83,7 +83,7 @@ tags:
       <div class="col-lg-12">
         <div class="row clock_sec clockdiv" id="clockdiv">
 
-            <h1 class="mb-3">What is Pass Plus?</h1>
+            <h2 class="mb-3">What is Pass Plus?</h2>
             <p>Pass Plus is a scheme that was introduced to help new drivers who have recently passed improve their attitudes and skills that are essential for 'safe driving for life'.</p>
 
         </div>
@@ -104,7 +104,7 @@ tags:
         <p>When you have successfully completed the course, you will be issued with a Certificate of Completion.</p>
       </div>
       <div class="col-lg-5">
-        <img src="{{ site.github.url }}/img/pass-plus.png">
+        <img src="{{ site.github.url }}/img/pass-plus.png" alt="PassPlus logo">
         </div>
     </div>
   </div>
