--- a/lessons-york.html
+++ b/lessons-york.html
@@ -34,7 +34,7 @@ location: York
 
     Our driving instructors in {{ page.location }} have over 15 years experience, putting you, our pupil first guiding you to success.</p>
 
-            <a class="primary-btn" href="#">
+            <a class="primary-btn" href="{{ site.github.url }}/driving-lessons-york/what-you-need">
               Learn More <i class="ti-arrow-right ml-1"></i>
             </a>
           </div>
