--- a/our-instructors.html
+++ b/our-instructors.html
@@ -15,13 +15,14 @@ heading: Get to know us.
 sub_heading: Find out more about our team of driving instructors at checkmirrors.
 instructors:
 - instructor_name: Sarah Hellowell
+  instructor_info: Sarah is the founder of checkmirrors.
   instructor_bio: She is an ADI with qualifications that include The Diamond Special
     Test, Pass Plus and Cardington Special Test. She has been a fully qualified instructor
     for over 17 years and takes pride in offering a professional, calm and safe environment
     that will help you pass your test.
-  instructor_image: ''
+  instructor_image: '/img/sarah-hellowell.jpg'
 - instructor_name: Rob Kedge
-  instructor_image: ''
+  instructor_image: '/img/rob-kedge.jpg'
   instructor_bio: Rob has 17 years experience as an ADI. He is a patient and friendly
     instructor able to adapt to teaching methods to suit each individual person. As
     well as an ADI Rob is a Pass Plus and Fleet trainer.
@@ -31,7 +32,7 @@ instructors:
     years in sales before deciding to become a qualified driving instructor in York.
     Ryan enjoys working with all ages and thrives on the challenge and success of
     helping people pass their tests.
-  instructor_image: ''
+  instructor_image: '/img/ryan-fawcett.jpg'
 
 ---
 <!-- Page Intro -->
@@ -45,65 +46,11 @@ instructors:
     <div class="row justify-content-center">
       <div class="col-lg-5">
         <div class="text-center my-5">
-          <h2 class="mb-3">Get to know us.</h2>
-          <p>Find out more about our team of driving instructors at checkmirrors</p>
+          <h2 class="mb-3">{{ page.heading }}</h2>
+          <p>{{ page.sub_heading }}</p>
         </div>
       </div>
     </div>
-    <div class="row mt-3">
-      <div class="col-12">
-      <div class="card mb-3">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <div class="card-img new-rounded">
-              <img src="{{ site.github.url }}/img/sarah-hellowell.jpg" alt="Sarah Hellowell">
-            </div>
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h3 class="card-title">Sarah Hellowell</h3>
-              <p class="small">Sarah is the founder of checkmirrors.</p>
-              <p class="card-text">She is an ADI with qualifications that include The Diamond Special Test, Pass Plus and Cardington Special Test. She has been a fully qualified instructor for over 17 years and takes pride in offering a professional, calm and safe environment
-                that will help you pass your test.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="col-12">
-      <div class="card mb-3">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <div class="card-img new-rounded">
-              <img src="{{ site.github.url }}/img/rob-kedge.jpg" alt="Rob Kedge">
-            </div>
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h3 class="card-title">Rob Kedge</h3>
-              <p class="card-text">Rob has 17 years experience as an ADI. He is a patient and friendly instructor able to adapt to teaching methods to suit each indivdual person. As well as an ADI Rob is a Pass Plus and Fleet trainer.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="col-12">
-      <div class="card mb-3">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <div class="card-img new-rounded">
-              <img src="{{ site.github.url }}/img/ryan-fawcett.jpg" alt="Ryan Fawcett">
-            </div>
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h3 class="card-title">Ryan Fawcett</h3>
-              <p class="card-text">Ryan is a qualified driving instructor and has been teaching for over 2 and half years. Ryan is a Business Management graduate who has spent 5 years in sales before deciding to become a qualified driving instructor in York. Ryan enjoys working with all ages and thrives on the challenge and success of helping people pass their tests.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      </div>
-    </div>
+    {% include instructors.html %}
     </div>
 </section>
