--- a/book-now.html
+++ b/book-now.html
@@ -1,6 +1,7 @@
 ---
 title: Book Driving Lessons in York
-permalink: "/book-now"
+permalink: "/book-now/"
+description: Book your lessons with checkmirrors now and be on the road in no time. All of our instructors are fully ADI qualified and we are COVID secure.
 layout: default
 category: Testimonial
 tags:
