--- a/lessons-york-info.html
+++ b/lessons-york-info.html
@@ -1,8 +1,6 @@
 ---
 title: Learning with checkmirrors
-description: Learn to drive in York with checkmirrors, book your driving lessons online
-  today. We have female driving instructors available, NHS discount and are COVID
-  secure.
+description: Find out about what learning to drive with checkmirrors is like with our handy guide to before you learn and your first lesson with checkmirrors. 
 permalink: "/driving-lessons-york/what-you-need"
 layout: default
 tags:
