--- a/our-instructors.html
+++ b/our-instructors.html
@@ -1,6 +1,7 @@
 ---
 title: Our Driving Instructors
 permalink: "/our-instructors/"
+description: Get to know the checkmirrors family, our instructors are fully ADI qualified and female instructors are available
 layout: default
 tags:
 - driving
@@ -56,4 +57,3 @@ instructors:
     {% include instructors.html %}
     </div>
 </section>
-
