--- a/testimonials-17.html
+++ b/testimonials-17.html
@@ -1,5 +1,6 @@
 ---
 title: Driving Lesson Testimonials
+description: Find out what the checkmirrors alumni have to say about learning to drive with checkmirrors
 permalink: "/testimonials/"
 layout: default
 tags:
