--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@ features_section:
     icon: <span class="fas fa-graduation-cap"></span>
     heading: Learn to drive with confidence
     features:
-    - Learn to drive in <a href="/driving-lessons-york">York</a>
+    - Learn to drive in <a href="https://www.checkmirrors.co.uk/driving-lessons-york/">York</a>
     - Fully qualified ADI instructors
     - Pass Plus Available
     - Flexible around you
     - NHS discount available
     feature_cta:
-      button_link: "/driving-lessons-york"
+      button_link: "/driving-lessons-york/"
       button_text: Find out more
   instructor:
     icon: <span class="fas fa-car"></span>
@@ -98,7 +98,7 @@ features_section:
     - Free livery
     feature_cta:
       button_text: Find out more
-      button_link: "/become-an-instructor"
+      button_link: "/become-an-instructor/"
 
 ---
 <section class="home_banner_area">
