--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@ features_section:
       <div class="row">
         <div class="col-lg-12">
           <div class="banner_content text-center">
-            <h1><span class="title-a">check</span><span class="title-b">mirrors</span></h1>
-            <h3>Driving instructors in York</h3>
+            <h1><span class="title-a">check</span><span class="title-b">mirrors</span> <span class="title-c">Driving instructors in York</span></h1>
             <p class="lead">As an established school of motoring we pride ourselves on offering a professional, high standard service that always puts the pupil first.</p>
             <div class="mb-3">
               <a class="btn btn-primary btn-lg btn-responsive" href="tel:07821291783" role="button"><i class="fa fa-phone" data-wow-delay=".1s"></i> Call to Book</a> or <button class="btn btn-primary btn-lg btn-responsive" data-toggle="modal" data-target="#bookFormModal">Book Online</button>
