--- a/lessons-york.html
+++ b/lessons-york.html
@@ -1,8 +1,7 @@
 ---
 title: Driving Lessons in York
 description: Learn to drive in York with checkmirrors, book your driving lessons online
-  today. We have female driving instructors available, NHS discount and are COVID
-  secure.
+  today. We have female driving instructors, NHS discount and are COVID secure.
 permalink: "/driving-lessons-york/"
 layout: default
 tags:
