--- a/lessons-york-info.html
+++ b/lessons-york-info.html
@@ -1,6 +1,6 @@
 ---
 title: Learning with checkmirrors
-description: Find out about what learning to drive with checkmirrors is like with our handy guide to before you learn and your first lesson with checkmirrors.
+description: Find out about what learning to drive with checkmirrors is like with our handy guide to before you learn and your first driving lesson.
 permalink: "/driving-lessons-york/what-you-need/"
 layout: default
 tags:
