passplus section to lessons

--- a/lessons-york.html
+++ b/lessons-york.html
@@ -68,3 +68,4 @@ pass_plus_section:
 {% include book-promo-dark.html %}
 <!-- Intro End -->
 {% include _lessons/offers_section.html %}
+{% include _lessons/pass_plus_section.html %}
