--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ services_section:
     card_text: |-
       * Flexible times to suit
       * Accredited instructors
-      * Only {{ site.data.siteData.prices.pricePerLesson }} per lesson
+      * Only £28 per lesson
     card_button:
       button_link: "/driving-lessons-york/"
       button_text: Learn More
