--- a/lessons-york-info.html
+++ b/lessons-york-info.html
@@ -1,5 +1,5 @@
 ---
-title: Learning with checkmirrors
+title: Next steps to learn to drive
 description: Find out about what learning to drive with checkmirrors is like with our handy guide to before you learn and your first driving lesson.
 permalink: "/driving-lessons-york/what-you-need/"
 layout: default
