--- a/book-now.html
+++ b/book-now.html
@@ -19,7 +19,7 @@ tags:
 {% include hero.html %}
 <div class="container mt-4">
   <div class="row justify-content-center">
-    <div class="col-5">
+    <div class="col-12 col-md-5">
 
       {% include form.html %}
     </div>
