--- a/testimonials-17.html
+++ b/testimonials-17.html
@@ -55,7 +55,7 @@ tags:
           <p class="card-text">
             {{ post.date | date_to_long_string }}
           </p>
-          <a class="btn btn-primary" href="https://www.facebook.com/sharer/sharer.php?u={{ site.github.url }}{{ post.url }}" target="_blank"><i class="fab fa-facebook"></i> Share</a>
+          <a class="primary-btn btn-bg" href="https://www.facebook.com/sharer/sharer.php?u={{ site.github.url }}{{ post.url }}" target="_blank"><i class="fab fa-facebook"></i> Share</a>
         </div>
       </div>
       </a>
